# ChangeLog for app-laptop/tlp
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*tlp-0.3.4 (21 Sep 2013)

  21 Sep 2013; Andre Erdmann <dywi@mailerd.de> +tlp-0.4.ebuild
  Version Bump with some notable changes, e.g. improves systemd support by
  no longer depending on UPower being built with --enable-deprecated
  (upower dependency completely dropped). See upstream changelog for details.

  19 Sep 2013; Andre Erdmann <dywi@mailerd.de>
  tlp-0.3.7.1.ebuild,
  tlp-0.3.8.1.ebuild,
  tlp-0.3.9.900_pre20130730.ebuild,
  tlp-0.3.9.ebuild:
  Default to USE+=tpacpi-bat, app-laptop/tpacpi-bat-1 is too old for TLP,
  upstream issue #44 (reported by MK-42).

  04 Aug 2013; Andre Erdmann <dywi@mailerd.de>
  tlp-0.3.7.1.ebuild,
  tlp-0.3.8.1.ebuild,
  tlp-0.3.9.900_pre20130730.ebuild,
  tlp-0.3.9.ebuild:
  sys-power/upower needs to be built with --enable-deprecated

*tlp-0.3.9.900_pre20130730 (30 Jul 2013)

  30 Jul 2013; Andre Erdmann <dywi@mailerd.de> +tlp-0.3.9.900_pre20130730.ebuild:
  Added TLP devel version, notable changes:
  * deal with udev's network device naming scheme
    (+support more than one eth device)
  * support for intel_pstate for controlling turbo mode
  * misc fixes/enhancements (see upstream log)

  16 May 2013; Andre Erdmann <dywi@mailerd.de>
  -tlp-0.3.7.901_pre20130126-r1.ebuild,
  -tlp-0.3.7.903_pre20130315.ebuild:
  devel versions removed as announced in package.mask.

*tlp-0.3.9 (02 May 2013)

  02 May 2013; Andre Erdmann <dywi@mailerd.de> +tlp-0.3.9.ebuild:
  Bugfix release, see upstream's changelog for details

  02 Apr 2013; Andre Erdmann <dywi@mailerd.de> tlp-0.3.7.1.ebuild:
  Fix building of tlp 0.3.7.1 which previously failed during src_prepare()
  because EGIT_COMMIT was not set properly. Instead, the ebuild always
  used upstream's master branch, which does no longer work since 0.3.8.1 has
  has been released.
  Reported by Burak Aktas (codwow; github issue #2).

*tlp-0.3.8.1 (30 Mar 2013)
