@@ -9,6 +9,6 @@ EBUILD tlp-0.3.7.1.ebuild 5536 SHA256 20627562c4aaffbc8c1880c27efcce0c72c9e4e859
 EBUILD tlp-0.3.8.1.ebuild 5718 SHA256 f10981957ea2d21be73723804e77e495c3d32ba4241afd972e849213768de6d1 SHA512 91fc479eef7704332c6d4ab2228ef049a399ca950ccbf3ec9ff3a744b9751380084895eb1dc3620336c6fa81ec831c4cf6304f66515be3360fb48a5b1937ed46 WHIRLPOOL 5ddca76473a1a9e1271c2eab48d7da70870669ec20a915e053422067a4d7c2ab6eff0e78507ad989c9b1458cdacf17b5658b3ba041575c57efe87c5978f9a45e
 EBUILD tlp-0.3.9.900_pre20130730.ebuild 5964 SHA256 164218f7c504358616af1a51160914bab6fd603694b9be0516cac43ed0688479 SHA512 71e59490ff74a29b5820de98176f66f1a4bec3707949e64060a9c266419e5f0859d6c43c2bd62f5b1ae9a36e5f657bd02d5ed99360313ae97609551546666b74 WHIRLPOOL 01912535116034423c7003e576f41c8d1a736c43edfe0b6a86d039ec92cf4e735a068ef3a64e284114d5819b940a880a37a445d3e131dabbe01e0b07bd3f80ba
 EBUILD tlp-0.3.9.ebuild 5752 SHA256 141c140eff808f8d39981f3d1b46e216a807f76ef1a36ff62d5658c816027983 SHA512 9f3cf9d7fef6c65d3a7ceaf829cdf5f39cb43cc78ac7b8238fa5610fb2a2fd62966c9ac6d5f03395bf0a4c618ae472cff41960e839029602ca3f054685592326 WHIRLPOOL eec311643fe71a51243e8049ae821894a71e2bd161733091572e2f6b69717250e99f4434a65088e9137465d690a350aed5adf4e773490fefec1473a70a385ca7
-EBUILD tlp-0.4.ebuild 5700 SHA256 4e4a2e3338e173e1a84c0ebf40f101063b8ed2498356e5a98a9f72c924e20afe SHA512 1d7034fc01b343381dab647a35c2cd99d9428f7d7413eca07cb6b22060aa2c752219828515d5203e0bc9a12102fc0b402f36c4962f7df536ba91474c19ac0845 WHIRLPOOL d2eef73337d0bcd1f933fdddc84bd6378c6c8443ea98d68e1f279552bcf39a5451528706a170959ee5d9d8aca092291ec971650c72c911cca54b91a4bd1f4ffa
-MISC ChangeLog 7585 SHA256 62fe24890c00e2c6f265919c4089926aacbd3af577e6a5fa1c0c3e72c24b9b08 SHA512 e09e94c1ea0d8d4f7d94809a224ad8847bb11678f845631b118ef70bf56adeecc817164ac22317d04a838480de2bf953f4472264070b5b8639182f144c05a4f5 WHIRLPOOL d24ddd446af4be7af83eaa1e8587a68538b2d2369354d54a7edd84ce551e8445e3788015126c33e5a767a5d59b35dba33cd97eaf8649090fcc41132f1d04f245
-MISC metadata.xml 1751 SHA256 0d51373a459e7f07c4a9fa9e34aca2b368585ffb48c4cc460552ccd477ffce26 SHA512 4a345eb5a5809a8c724d1a094bc211b7fc9e04fbb4ef14735d43058a083d20d0db9dd161831750c9a877e01d444ac78b593b97b751926014c6330f291227c18a WHIRLPOOL e7d0863c48b1afc537bf33d4a9117ff81c437eac3ce92588b96dd20f3885819485c26a9d0dc43fcad0c377a81bd3c5b80090244ce6f0cb18112e8bb6106c1a74
+EBUILD tlp-0.4.ebuild 5837 SHA256 ce9bb9fd43023fe360f3821cbd48062b56e2cdc748d1bcbb392e6b0baad0626e SHA512 ec101176557fb9bd849523d32f589d1aeadf33d5d527ec18e5c773a6deb04e31e328c917294588fae7edc0276cbcc6e447bc0da0464251fa3e38979647b6bdb6 WHIRLPOOL 95518bd05acef1319aef51b3b03ed89b912c3325a13c54f7247a3a4ed38def1196b6ba73038ed1b9c6aa0272d4944925abe6da36b40beb79654f801b56998706
+MISC ChangeLog 7767 SHA256 24c1e65d3b7d66678ef8f4302db2d1ebf83d279b7586336ff32b0da50b8fdf9e SHA512 56a3208feb41306037363530270ea91143c015b1fb4136d062b632d29ccc93ac5d74ede3ba57503494a466537f4f2c27d671547b5684a1afc0ceaa759dca7bd3 WHIRLPOOL 8c62aefd25b931e278445fc34da6a5c6bd848602ffdd44cc1b6cb15b63bb68a33df7f705274789891adbaa5858234e7454a73a3b55f26cb990759a8bc1a91068
+MISC metadata.xml 1827 SHA256 26b4aecb542b0e7f6bfc0cfa368fae87fc2f007439618a8d692f594022e2345f SHA512 c162d87fd96c4a89c5ff855224f1c5023c37867c0fba4220ed04d2f4473b793ede0a9a90847fa93cbe2e077650c595e85103b91b4dea038d7dde527075eb407e WHIRLPOOL bf3bae84921e927070d1f9fdf36f319c745e0fbdc77b39d4fe0c949208c0073cb792adf0d66d63a8c900c746a462ea7bfbe5621ba6a78bd71caa029e56185b71
