@@ -2,7 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
-*tlp-0.3.4 (21 Sep 2013)
+  10 Dec 2013; Andre Erdmann <dywi@mailerd.de> tlp-0.4.ebuild
+  - Set TLP_ENABLE=0 in TLP's config file as it used to be prior to 0.4.
+  - src_install(): call emake with CONFFILE set
+
+*tlp-0.4 (21 Sep 2013)
 
   21 Sep 2013; Andre Erdmann <dywi@mailerd.de> +tlp-0.4.ebuild
   Version Bump with some notable changes, e.g. improves systemd support by
